# src/routes/dailyMessage.js
@@ -1,0 +1,7 @@
+const router = require('express').Router();
+
+const greetingsController = require('../controllers/dailyMessage');
+
+router.get('/', greetingsController.getDailyMessage);
+
+module.exports = router;
