# src/routes/routes.js
@@ -2,5 +2,6 @@ const router = require('express').Router();
 
 router.use('/', require('./apiDocs'));
 router.use('/greetings', require('./greetings'));
+router.use('/daily-message', require('./dailyMessage'));
 
 module.exports = router;
